# anagram-generator

./: .gitignore  Cargo.toml  README.md
algorithm/: .gitignore
algorithm/pkg/: README.md  anagram_generator.d.ts  anagram_generator.js  anagram_generator_bg.d.ts  anagram_generator_bg.wasm  package.json
algorithm/src/: anagram.rs
frontend/: index.js  package-lock.json  package.json  webpack.common.js  webpack.config.js  webpack.dev.js  webpack.prod.js
frontend/resources/: Logo.psd
frontend/src/: App.tsx  index.html
frontend/src/components/atoms/: Button.tsx  Centered.tsx  Div.tsx  Input.tsx  Link.tsx  ParticlesBackground.tsx  Small.tsx
frontend/src/components/pages/: AnagramPage.tsx
frontend/src/components/templates/: PageTemplate.tsx
frontend/src/themes/: default.ts
src/: anagram.rs  lib.rs  main.rs
